--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -11,3 +11,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is the research proposal for the final project by Emilia Sicari and Rafael Lopez V for the course Collaborative Social Science Data Analysis at Hertie School of Governance. 
 
+#Introduction
+
+relations betwenn growth, inequality, public services and transports as a way to reduce inequality. reationship between inequality and luxury consumption
+
+#Research question, hypotheses and justification
+
+#Data and methodology (including statistical methods)
+
+
+#Bibliography 
