--- a/References.bib
+++ b/References.bib
@@ -7,3 +7,38 @@
   year={2012},
   publisher={Elsevier}
 }
+
+@article{cingano2014trends,
+  title={Trends in income inequality and its impact on economic growth},
+  author={Cingano, Federico},
+  year={2014},
+  publisher={OECD Publishing}
+}
+
+@book{ostry2014redistribution,
+  title={Redistribution, inequality, and growth},
+  author={Ostry, Mr Jonathan David and Berg, Mr Andrew and Tsangarides, Mr Charalambos G},
+  year={2014},
+  publisher={International Monetary Fund}
+}
+
+@article{alesina1996income,
+  title={Income distribution, political instability, and investment},
+  author={Alesina, Alberto and Perotti, Roberto},
+  journal={European economic review},
+  volume={40},
+  number={6},
+  pages={1203--1228},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{benhabib2003tradeoff,
+  title={The tradeoff between inequality and growth},
+  author={Benhabib, Jess and others},
+  journal={Annals of Economics and Finance},
+  volume={4},
+  pages={491--507},
+  year={2003},
+  publisher={PEKING UNIV. PRESS}
+}
