--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -17,6 +17,10 @@ relations betwenn growth, inequality, public services and transports as a way to
 
 #Research question, hypotheses and justification
 
+
+#Literature review 
+
+
 #Data and methodology (including statistical methods)
 
 
