--- a/References.bib
+++ b/References.bib
@@ -42,3 +42,24 @@
   year={2003},
   publisher={PEKING UNIV. PRESS}
 }
+
+@book{gallo2002economic,
+  title={Economic growth and income inequality: Theoretical background and empirical evidence},
+  author={Gallo, Cesar},
+  year={2002},
+  publisher={Development Planning Unit, University College London}
+}
+
+@inproceedings{majumdar2009impact,
+  title={Impact of Economic Growth on Income Inequality: A Regional Perspective},
+  author={Majumdar, Shibalee and Partridge, Mark D and others},
+  booktitle={Agricultural and Applied Association in its series 2009 Annual Meeting},
+  year={2009}
+}
+
+@book{dabla2015causes,
+  title={Causes and consequences of income inequality: a global perspective},
+  author={Dabla-Norris, Ms Era and Kochhar, Ms Kalpana and Suphaphiphat, Mrs Nujin and Ricka, Mr Frantisek and Tsounta, Evridiki},
+  year={2015},
+  publisher={International Monetary Fund}
+}
