--- a/References.bib
+++ b/References.bib
@@ -63,3 +63,34 @@
   year={2015},
   publisher={International Monetary Fund}
 }
+
+@article{seery2014working,
+  title={Working for the Many: Public services fight inequality},
+  author={Seery, Emma},
+  year={2014}
+}
+
+@article{verbist2012impact,
+  title={The Impact of Publicly Provided Services on the Distribution of Resources},
+  author={Verbist, Gerlinde and F{\"o}rster, Michael F and Vaalavuo, Maria},
+  year={2012},
+  publisher={OECD Publishing}
+}
+
+@article{hoeller2014reducing,
+  title={Reducing income inequality while boosting economic growth: Can it be done? Evidence from OECD countries},
+  author={Hoeller, Peter and Joumard, Isabelle and Koske, Isabell},
+  journal={The Singapore Economic Review},
+  volume={59},
+  number={01},
+  pages={1450001},
+  year={2014},
+  publisher={World Scientific}
+}
+
+@inproceedings{lewis2011economic,
+  title={Economic perspectives on transport and equality},
+  author={Lewis, David},
+  year={2011},
+  organization={International Transport Forum Discussion Paper}
+}
