finished literature review

--- a/ReseachProposal.Rmd
+++ b/ReseachProposal.Rmd
@@ -3,6 +3,9 @@ title: "ResearchProposal"
 authors: Emilia Sicari and Rafael L. Valverde
 date: March 25 2016
 output: pdf_document
+toc: true
+toc_depth: 2
+number_sections: true
 ---
 
 ```{r setup, include=FALSE}
@@ -13,10 +16,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is the research proposal for the final project by Emilia Sicari and Rafael Lopez V for the course Collaborative Social Science Data Analysis at Hertie School of Governance. 
 
-=======
 #Introduction
 
-relations betwenn growth, inequality, public services and transports as a way to reduce inequality. reationship between inequality and luxury consumption
+(relations between growth, inequality, public services and transports as a way to reduce inequality. reationship between inequality and luxury consumption)
+
+In the last decades, the increase in income inequality has raised growing concern. In 2013 inequality and lack of mobility were defined as "the challenge of our time" by President Obama and one year later Pope Francis condemned the global "economy of exclusion". In fact, income inequality is not only a problem of developed economies, where the gap between rich and poor is at highest levels in decades, but also in emerging economies, experiencing more mixed trends. In fact, all over access we find pervasive disparities (Dabla-Norris E., Kochhar, K., Suphaphiphat, N., Ricka, F. et alia, 2015). 
+
 
 #Research question, hypotheses and justification
 
@@ -34,31 +39,20 @@ H4 - the rise in inequality caused by economic growth leads people on the higher
 JUSTIFICATION.... 
 
 #Literature review 
+The description of the link between economic growth and inequality requires some preliminary definitions. 
+Inequality indicates differences in income, consumption or wealth associated with social welfare. Income is widely defined as the amount of money in a given period of time that an individual can spend in consumption without altering the value of their wealth. Economic growth is the rise GDP and GDP in per capita, which is usually considered function of the level of savings and investment. Finally, income distribution is the amount of income that individuals receive in a given society. There are two concepts attached to income distribution that can be found in the literature: functional and size distribution. The functional approach how total income is distributed between land, labour and capital. Instead, size distribution shows how much income is received by individuals (or households) (Gallo, 2002). 
 
-In the last decades, the increase in income inequality has raised growing concern. In 2013 inequality and lack of mobility were defined as "the challenge of our time" by President Obama and one year later Pope Francis condemned the global "economy of exclusion". In fact, income inequality is not only a problem of developed economies, where the gap between rich and poor is at highest levels in devades, but also in developing economies and emerging markets, experiencing more mixed trends. in fact, although in some countries the gap is narrowing, all over access to education, health care and finance show pervasive disparities (Dabla-Norris E., Kochhar, K., Suphaphiphat, N., Ricka, F. et alia, 2015). 
+The relations between growth and inequality is bilateral. 
+On the one hand, it is widely recognized that a rise in income inequality, results in a fall in economic growth. According to OECD (2014), income inequality has a negative and statistically significant impact on medium-term growth: rising inequality by 3 Gini points – the average in OECD countries over the past two decades – would drag down economic growth by 0.35% per year for 25 years, causing a cumulated loss in GDP at the end of the period amounting to 8.5%. There are several reasons explaining this causal relation. First, income inequality triggers political instability, which, in turn, tends to reduce investment and - consequently - economic growth.  Moreover, disparities in income distribution encourage poor people to undertake rent-seeking or illegal activities threatening property rights, and that drives down investment too (Alesina, Perotti, 1996). In addition, inequality reduces the capacity of poorer members of the society to invest in education – thus hampering social mobility and skill development – (Cingano, 2014) and reduces social consensus required to adjust shocks and sustain growth. Neverthess, all those effects may be non linear: increases in inequality from low levels provides growth enhancing incentives, while increases part some point encourage rent-seeking and lower growth (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). Finally, in highly unequal context, the majority of the voters - who are usually poor - ask for redistributive policies, which decrease the after-tax marginal product of capital, hence lowering the rate of accumulation and driving down growth (Alesina, Perotti 1996). Nevertheless, it is worth noting that redistribution policies may also positively affect growth, by reducing tensions and incentivizing productive activities and capital accumulation. Yet, the net effect of redistributive policies on growth has to weigh the costs of distortionary taxation against the benefits of reduced social tensions. More broadly, taxation may not be inherently detrimental to growth, as long as it reduces tax expenditure or loopholes that benefit the rich, increases public investment through progressive taxation or social insurance spending on welfare favouring poor people (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). 
 
-Before reviewing the relevant literature on this subject, some basic deifinitions are due. Inequality indicates differences in income, consimption or wealth associated with social welfare. Income is widely defined as the amount of money in a given period of time that an individual can spend in consumption without altering the value of their wealth. Economic growth is the rise GDP and GDP in per capita, which is usually considered function of the level of savings and investment. Finally, income distribution is the amount of income that individuals receive in a given society. There are two concepts attached to income distribution that can be found in the literature: functional and size distribution. The functional approach  how total income is distributed between land, labour and capital. Instead, size distribution shows how much income is received by individuals (or households). 
+On the other hand, economic growth may produce a rise in income inequality, leading to social tensions and political discontent that jeopardize the wellbeing of society (Gallo, C., 2002). According to the inverted U hypothesis (Kuznets, 1955, p. 18), there is “a long swing in the inequality characterizing the secular income structure: widening in the early phases of economic growth, when the transition from the preindustrial to the industrial civilization was most rapid; becoming stabilized for a while; and then narrowing in the later phases”. There are two factors explaining the rise in income inequality. First, the concentration of savings in the hands of the upper social classes leads to higher amount of income for them and their descendants. Second, increase in the urban share of the population resulting from economic growth is assumed to be more unequal than rural population, whose income is lower than the urban one. Hence, this gap in relative mean incomes tends to widen as a result of a more rapid growth of the per capita productivity in economic urban activities than in agriculture. However, such negative effects of economic growth only hold in the short run, since in the long run this trend tends to reverse due to government redistribution policies and other exogenous factors (the decrease in the proportion of rich families and immigration entering at the lower income levels). Moreover, this tendency toward increasing inequality is reversed when all the surplus labour is absorbed into modern sector employment, becoming a scarce factor of production. Therefore, further growth, implying an increase in labour demand, will push the wages up, thus levelling inequality. However, despite the relation between economic growth and inequality has been widely investigated in the literature, no definite causal relation has been found that allows generalizing the ways in which economic growth affects income inequality. Instead, empirical evidence shows that the impact of economic growth on income distribution depends more on the way in which growth is pursued than on the level of per capita income or the rate of growth (Gallo, 2002). 
 
-The relations between growth and inequality is bilateral. However, while there is extensive literature on the impact of income disparities on growth, very few studies on the inverse relation are available. 
+Income inequality depends on policies and institutions. Particularly, policies have to target social strata earning the lowest incomes, through anti poverty programmes, cash transfers, job-related training and education, and access to public services (Cingano, 2014). Particularly, public services mitigate the impact on uneven distribution of income, by endowing the poorest strata with 'virtual income'. For instance, in OECD countries public services are worth the 76% of the net income of the poorest groups and just 14% of the richest and they are considered to reduce inequality by an average on 20%. However, in order to be effective, they must be delivered for free or provide user fees granting accessibility to the lower classes (Seery, 2014) (for example, they have to be means-tested). In fact, public services like education, health care, housing and elderly care activate indirect flows that affect household's consumption possibilities and their capacity to attend their needs, thus affecting the distribution of resources across households (Verbist, Förster, Vaalavuo, 2014)
 
-On the one hand, it is widely recongnised that a rise in income inequality, results in a fall in economic growth. According to OECD (2014), income inequality has a negative and statistically significant impact on medium-term growth: rising inequality by 3 Gini points – the average in OECD countries over the past two decades – would drag down economic growth by 0.35% per year for 25 years, causing a cumulated loss in GDP at the end of the period amounting to 8.5%. There are several reasons explaining this causal relation. First, income inequality triggers political intability, resulting in political-economic uncertainty which, in turn, tends to reduce investment and - thus - economic growth.  Particularly, disparities in income distribution encourage poor people to undertake rent-seeking or illegal activities threatening poverty rights, and that drives down investment. The second mechanism is fiscal redistribution: in highly unequal context, the majority of the voters - who are poor - ask for redistributive policies; however, since such policies decrease the after-tax marginal product of capital, this lowers the rate of accumulation driving down growth (Alesina, Perotti 1996). Nevertheless, it is worth noting that redistribution policies may also positively affect growth, by reducing tensions and incentivising productive activities and capital accumulation. Yet, the net effect of redistributive policies on growth has to weigh the costs of distortionary taxation against the benefits of reduced social tensions. More broadly, taxation may not be ineherently detrimental to growth, as long as it reduces tax expenditure or loopholes that benefit the rich, increases public investment through progressive taxation or social insurance spending on welfare favouring poor people (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). Finally, inequality reduces the capacity of poorer members of the society to invest in education, - thus hampering social mobility and skill development - (OECD, 2014) and reduces social consensus required to adjust shocks and sustain growth. Neverthess, all those effects may be non linear: increases in inequality from low levels provides growth enhancing incentives, while increases part some point encourage rent-seeking and lower growth (Ostry, J. D., Berg A., Tsangarides, G. C., 2014). 
+A part from the already mentioned public services, even public transports affect income distribution and the standard of living of households and individuals. For example, subsidies on public transport make mobility more affordable to low income groups (Verbist, Förster, Vaalavuo, 2014) As long as public transports grant the opportunity to get key services at reasonable cost, in reasonable time, with reasonable ease, they can reduce income disparity and social exclusion by easing access to job opportunities, learning, health care, food, and social, cultural and sporting activities. Moreover, they also reduce the impact of traffic on deprived communities. Therefore, distributive effects of public transports can be either direct – the reduction in the financial cost of mobility – or indirect – the increase in opportunities of the beneficiaries, especially with regards to the labour market. Many studies find that public transport subsidies appear to make the poorest better off, though there is variation by mode of transportation (e.g. bus travel subsidies turned out be more pro-poor than those for rail transport), by geographical location (Lewis, 2011). 
 
-On the other hand, economic growth may produce a rise in income inequality and spread poverty, leading to social tensions and political discontent that jeopardise the wellbeing of society (Gallo, C., 2002). According to the inverted U hypothesis (Kuznets, 1955, o. 18), there is "a long swing in the inequality characterising the secular income structure: widening in the early phases of economic growth, when the transition from the preindustrial to the industrial civilization was most rapid; becoming stabilised for a while; and then narrowing in the later phases. There are two factors explaining the rise in income inequality. First, the concentration of savings in the hands of the upper social classes that lead to higher amount of income for them and their descendants. Second, increase in the urban share of the population resulting from economic growth is assumed to be more unequal than rural population, whose income is lower than the urban one. Hence, this gap in relative mean incomes tends to widen as a result of a more rapid growth of the per capita productivity in economic urban activities than in agriculture. However, such negative effects of economic growth only hold in the short run, since in the long run this trend tends to reverse due to government redistribution policies and other exogenous factors (such as the decrese in the proportion of rich families and growing immigration entering at the lower in come levels reduce the share of the top 5%of the population). Moreover, this tendency toward increasing inequality is reversed when all the surplus labour is absorbed into modern sector employment. Thus, labour becomes a scarce factor of production and further growth, which implies an increase in labour demand, will push the wages up. So, this rise in the general wage level will bring the downturn in inequality and poverty reduction. This theory has received little empirical support and in general, despite the relation between economic growth and inequality has been widely investigated in the literature, no definite causal relation has been found that allows generalising the ways in which economic growth affects income inequality. On the contrary empirical evidence shows that the impact of economic growth on income distribution depends more on the way in which growth is pursued than on the level of per capita income or the rate of growth. In fact, inequality is highly correlated with education, government economic activity, population growth rate, urbanisation, importance of the agricultural sector in total production, the specific characteristics of a country such as political system, natural resources, and other structural factors such as barriers to entry into high income jobs, the structure of capital markets and limited access to credits, existing distribution of property ownership, and inheritance system (Gallo, 2002). 
+A link between improved transport and diminished regional disparities in income and well-being is evident in both emerging and developed economies, but the relative effectiveness of improvements in mobility to reduce poverty depends on the degree to which a society is already developed (Lewis, 2011). 
 
-According to the OECD (2014), income inequality in the result of policies and institutions. As a consequence, policies must not only address poverty in general, but they also have to target social strata earning the lowest incomes, especially the lower midlle classes (the bottom 40%). Anti poverty programmes, cash tranfers, job-related training and education for the low skilled, and access to public services are just some examples of social investment policies that can create better opportunities in the long-run. Paticularly, pulbic services mitigate the impact on eneven distribution of income, by giving the poorest strata 'virtual income', with a true equalising power. For instance, in OECD countries public services are worth the 76% of the net income of the pooresr groups and just 14% of the richest and they are considered to reduce inequality by an average on 20%. However, in order to be effective, they must be delivered for free or provide user fees granting accessibility to the lower classes (Seery, 2014) (for example, they have to be means-tested). The term accessibility goes to ―whether people can get to key services at reasonable cost, in reasonable time, with reasonable ease. six distinct transport-related problems associated with low income and social exclusion in that country:
--	Access to work
--	Access to learning
--	Access to healthcare+access to food shops
--	Access to social, cultural, and sporting activities
--	Impact of traffic on deprived communities. 
-
-
-Public services like education, health care, housing and elderly care activate indirect flows that affect household's consumption possibilities and their capacity to attend their needs. In addition to influencing the overall economic well-being of households, publicly provided services also impact on the distribution of resources across households. 
-
-A part from the already mentioned pulbic services, even public transportation affects interpersonal redistribution and the standard of living of households and individuals. Major examples are subsidies on public transport, which tend to make mobility more affordable, especially to low income groups. Distributive effects can be either direct, by reducing the financial cost of mobility or indirect, by increasing the labour market opportunities of the beneficiaries. Many studies find that public transport subsidies appear to make the poorest better off, though there is variation by mode of transportation (e.g. bus travel subsidies turned out be more pro-poor than those for rail transport) as well as by geographical location. The redistributive effects are higher for some specific population groups at higher risk of poverty. 
-In a national, long-term study, researchers at Harvard found commute times were a crucial predictor of upward social mobility: families living in areas with shorter average commute times had a better chance of moving up the economic ladder than those living in areas with longer average commute times.A link between improved transport and diminished regional disparities in income and well-being is evident in emerging and developed economies alike, but the relative effectiveness of improvements in mobility to reduce poverty depends on the degree to which a society is already developed:
-
- 
 
 #Case study: to which extent the rise in inequality caused by economic growth affects the purchase of luxury goods in Singapore?
 
@@ -66,22 +60,23 @@ In a national, long-term study, researchers at Harvard found commute times were 
 
 
 #Bibliography 
+Alesina, A., Perotti, R., (1996). Income distribution, political instability, and investment. European Economic Review 40(6): 1203-1228. Elsevier
 
-Alesina, A., Perotti, R., (1996). Income distribution, political instability, and investment. European Economic Review 40(6): 1203-1228.
+Benhabib, J. (2003) The tradeoff between inequality and growth. Annals of Economics and Finance, 4: 491--507. Peking University Press
 
 Cingano, F., (2014). Trends in income inequality and its impact on economic growth. OECD publishing. 
 
-Dabla-Norris E., Kochhar, K., Suphaphiphat, N., Ricka, F., Tsounta, E. (2015). Causes and Consequences of Income Inequality:   A Global Perspective. International Monetary Fund, Washington DC.
+Dabla-Norris E., Kochhar, K., Suphaphiphat, N., Ricka, F., Tsounta, E. (2015). Causes and Consequences of Income Inequality: A Global Perspective. International Monetary Fund, Washington DC.
 
-Gallo, C., (2002). Economic Growth and income inequality: theoretical background and empirical evidence. Working paper n.     119, University College of London:
- https://www.bartlett.ucl.ac.uk/dpu/publications/latest/publications/dpu-working-papers/WP119.pdf
+Gallo, C., (2002). Economic Growth and income inequality: theoretical background and empirical evidence. Working paper n. 119, University College of London:
+https://www.bartlett.ucl.ac.uk/dpu/publications/latest/publications/dpu-working-papers/WP119.pdf
 
 Hoeller, P., Joumard, I., Koske, I. (2014). Reducing income inequality while boosting economic growth: Can it be done? Evidence from OECD countries. World Scientific.
  
-Lewis, D., (2011). Economic perspectives on transport and equality. International Transport Forum Discussion Paper
+Lewis, D., (2011). Economic perspectives on transport and equality. International Transport Forum Discussion Paper. 
  
 Ostry, J. D., Berg A., Tsangarides, G. C., (2014). Redistribution, inequality and growth. International Monetary Fund, Washington DC. 
 
 Seery, E., (2014). Working for the many: public services fight inequality. OXFAM.
 
-Verbist, G., Foörster, M. F., Vaalavuo, M. (2014). The impact of publicly provided services on the distribution of resources.  Working Papers n. 130, OECD Social, Employment and Migration
+Verbist, G., Förster, M. F., Vaalavuo, M. (2014). The impact of publicly provided services on the distribution of resources.  Working Papers n. 130, OECD Social, Employment and Migration
