Update of my references

--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,98 @@
+%% Created using Papers on Tue, 22 Mar 2016.
+%% http://papersapp.com/papers/
+
+@article{Low:2012wb,
+author = {Low, Donald},
+title = {{Behavioural economics and policy design : examples from Singapore}},
+year = {2012},
+annote = {Accession Number: gbv.668238917; Other Notes: Enth. 9 Beitr.; Includes bibliographical references and index; Publication Type: Book; Physical Description: XX, 193 S. : graph. Darst.; Language: English; LCCN: 2011038079}
+}
+
+@techreport{DepartmentforTransport:2011ui,
+author = {{Department for Transport}},
+title = {{Behavioural Insights Toolkit}},
+year = {2011},
+month = nov
+}
+
+@misc{LecturebyDeanKish:2015vv,
+title = {{Lecture by Dean Kishore Mahbubani at the Dili Convention Centre}},
+author = {Mahbudani, Kishore},
+month = mar,
+year = {2015}
+}
+
+@webpage{Mahbudani:2015vu,
+author = {Mahbudani, Kishore},
+title = {{Display the values we claim to have}},
+year = {2015},
+month = aug,
+url = {http://www.straitstimes.com/opinion/display-the-values-we-claim-to-have}
+}
+
+@webpage{Atsmon:2011ts,
+author = {Atsmon, Yuval and Dixit, Vinay and Wu, Cathy},
+title = {{Tapping China{\textquoteright}s luxury-goods market }},
+year = {2011},
+month = apr,
+url = {http://www.mckinsey.com/business-functions/marketing-and-sales/our-insights/tapping-chinas-luxury-goods-market}
+}
+
+@webpage{Kollewe:2015vm,
+author = {Kollewe, Julia},
+title = {{Global luxury goods market exceeds {\texteuro}1tn}},
+year = {2015},
+month = oct,
+url = {http://www.theguardian.com/business/2015/oct/29/global-luxury-goods-market-exceeds-1tn-euro}
+}
+
+@webpage{Mahbudani:2014tv,
+author = {Mahbudani, Kishore},
+title = {{Big Idea No. 1: A 'less-car' Singapore}},
+year = {2014},
+month = feb,
+url = {http://www.straitstimes.com/opinion/big-idea-no-1-a-less-car-singapore}
+}
+
+@webpage{Mahbudani:2016tq,
+author = {Mahbudani, Kishore},
+title = {{Big Idea No.2: Public transport No. 1 in the world?}},
+year = {2016},
+month = mar,
+url = {http://lkyspp.nus.edu.sg/news/public-transport-no-1-in-the-world/}
+}
+
+@webpage{TheEconomist:2012wi,
+author = {{The Economist}},
+title = {{Seeing the back of the car}},
+year = {2012},
+month = sep,
+url = {http://www.economist.com/node/21563280}
+}
+
+@webpage{Rachel:2014wq,
+author = {Rachel, Au-Yong and Maryam, Mokhtar},
+title = {{Youth worry about rising costs and jobs}},
+year = {2014},
+month = jan,
+url = {http://www.straitstimes.com/singapore/youth-worry-about-rising-costs-and-jobs}
+}
+
+@webpage{Tan:2013vm,
+author = {Tan, Shin Bin and Leong, Ching},
+title = {{The Evolution of Public Transport Policies in Singapore }},
+year = {2013},
+url = {http://lkyspp.nus.edu.sg/wp-content/uploads/2014/01/Transport-Planning-for-Singapore.pdf}
+}
+
+@book{Wilkinson:2012ub,
+author = {Wilkinson, Nick and Klaes, Matthias},
+title = {{An Introduction to Behavioral Economics}},
+publisher = {Palgrave Macmillan},
+year = {2012},
+month = apr
+}
+
 @article{metcalfe2012behavioural,
   title={Behavioural economics and its implications for transport},
   author={Metcalfe, Robert and Dolan, Paul},
