--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,10 @@
-%% Created using Papers on Tue, 22 Mar 2016.
-%% http://papersapp.com/papers/
+@webpage{Kollewe:2015vm,
+author = {Kollewe, Julia},
+title = {{Global luxury goods market exceeds {\texteuro}1tn}},
+year = {2015},
+month = oct,
+url = {http://www.theguardian.com/business/2015/oct/29/global-luxury-goods-market-exceeds-1tn-euro}
+}
 
 @article{Low:2012wb,
 author = {Low, Donald},
@@ -37,14 +42,6 @@ title = {{Tapping China{\textquoteright}s luxury-goods market }},
 year = {2011},
 month = apr,
 url = {http://www.mckinsey.com/business-functions/marketing-and-sales/our-insights/tapping-chinas-luxury-goods-market}
-}
-
-@webpage{Kollewe:2015vm,
-author = {Kollewe, Julia},
-title = {{Global luxury goods market exceeds {\texteuro}1tn}},
-year = {2015},
-month = oct,
-url = {http://www.theguardian.com/business/2015/oct/29/global-luxury-goods-market-exceeds-1tn-euro}
 }
 
 @webpage{Mahbudani:2014tv,
@@ -86,7 +83,7 @@ year = {2013},
 url = {http://lkyspp.nus.edu.sg/wp-content/uploads/2014/01/Transport-Planning-for-Singapore.pdf}
 }
 
-@book{Wilkinson:2012ub,
+@book{Wilkinson2012,
 author = {Wilkinson, Nick and Klaes, Matthias},
 title = {{An Introduction to Behavioral Economics}},
 publisher = {Palgrave Macmillan},
@@ -183,3 +180,4 @@ month = apr
   year={2011},
   organization={International Transport Forum Discussion Paper}
 }
+
